--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,10 @@
 	<title>Gopher chat</title>
 	<meta name="description" content="Simple chat. Example usage of github.com/gobwas/ws">
 	<meta name="author" content="Sergey Kamardin">
- 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
-	<script src="https://unpkg.com/mithril/mithril.js"></script>
+	<script src="https://unpkg.com/mithril@1.1.7/mithril.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
 </head>
 <body>
